; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcpim.c_bfa_tskim_qresume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcpim.c_bfa_tskim_qresume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_tskim_s = type { i32 }

@tm_qresumes = common dso_local global i32 0, align 4
@BFA_TSKIM_SM_QRESUME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @bfa_tskim_qresume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_tskim_qresume(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.bfa_tskim_s*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.bfa_tskim_s*
  store %struct.bfa_tskim_s* %5, %struct.bfa_tskim_s** %3, align 8
  %6 = load %struct.bfa_tskim_s*, %struct.bfa_tskim_s** %3, align 8
  %7 = getelementptr inbounds %struct.bfa_tskim_s, %struct.bfa_tskim_s* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @tm_qresumes, align 4
  %10 = call i32 @bfa_stats(i32 %8, i32 %9)
  %11 = load %struct.bfa_tskim_s*, %struct.bfa_tskim_s** %3, align 8
  %12 = load i32, i32* @BFA_TSKIM_SM_QRESUME, align 4
  %13 = call i32 @bfa_sm_send_event(%struct.bfa_tskim_s* %11, i32 %12)
  ret void
}

declare dso_local i32 @bfa_stats(i32, i32) #1

declare dso_local i32 @bfa_sm_send_event(%struct.bfa_tskim_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
